Render trigger and modal

--- a/index.html
+++ b/index.html
@@ -4,14 +4,13 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Analytics Test</title>
+  <title>Feedback Demo</title>
 </head>
 
 <body>
-  <div id="root"><img src="a.png" /></div>
-  
+  <div id="root"></div>
 </body>
 <script type="text/javascript" defer>
-  Analytics.track()
+  Feedback.init('W120121320')
 </script>
 </html>
