Complete modal ui

--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Feedback Demo</title>
+  <style>
+    body {
+      font-family: -apple-system,BlinkMacSystemFont,segoe ui,Roboto,helvetica neue,Arial,noto sans,sans-serif,apple color emoji,segoe ui emoji,segoe ui symbol,noto color emoji;
+    }
+  </style>
 </head>
 
 <body>
