--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
   <div id="root"></div>
 </body>
 <script type="text/javascript" defer>
-  Feedback.init('W120121320')
+  Feedback.init('Test', {
+    url: 'http://localhost:9033/receiveFeedback'
+  })
   Feedback.user('wenfeng')
 </script>
 </html>
