--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 </body>
 <script type="text/javascript" defer>
   Feedback.init('Test', {
-    url: 'http://localhost:9033/receiveFeedback'
+    url: 'http://localhost:9033/receiveFeedback',
+    primaryColor: '#4f43af'
   })
   Feedback.user('wenfeng')
 </script>
